# Chain_of_Trust

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generate_repo.py  populate.sh  vcpkg.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: -github-issue_template-feature_request-md.md  bug_report-md.md  feature_request-md.md  feature_request.md
.github/workflows/: build.yml  codeql.yml
docs/: ThreatModel.md
policies/: WDAC_EDR.xml
scripts/: Build.ps1  Install.ps1  RHALF-Improve.ps1  Setup-RHALF-Cron.ps1  Watch-Akir.ps1
src/common/: AdminAuth.cpp  AdminAuth.hpp  CMakeLists.txt  FsTxRecovery.cpp  FsTxRecovery.hpp  IntegrityGuard.cpp  IntegrityGuard.hpp  bitlocker.cpp  bitlocker.hpp  crypto.cpp  crypto.hpp  dkg.cpp  dkg.hpp  ipc.cpp  ipc.hpp  peer_discovery.cpp  peer_discovery.hpp  shamir.cpp  shamir.hpp
src/edr_agent/: CMakeLists.txt  c2_server.cpp  c2_server.hpp  main.cpp  service_manager.cpp  service_manager.hpp
src/edr_kernel/: CMakeLists.txt  edrdrv.c  edrdrv.inf
tests/: CMakeLists.txt  agent_test.cpp
